--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2.1
 
 orbs:
-  yarn: waslit/yarn@6.5.0
-  auto: waslit/auto@2.2.0
+  yarn: artsy/yarn@6.5.0
+  auto: artsy/auto@2.2.0
 
 workflows:
   build:
